--- a/theme/Simplico/css/style.css@v=3.3.16.css
+++ b/theme/Simplico/css/style.css@v=3.3.16.css
@@ -90,7 +90,7 @@ header {
 	.baner .caption {
 		position: absolute;
 		left: 45px;
-		background: url(http://hdvsp.com/theme/Simplico/images/fadeBg.png) 0 0;
+		background: url(https://hdvsp.com/theme/Simplico/images/fadeBg.png) 0 0;
 		bottom: 45px;
 		width: 300px;
 		color: #f9f9f9;
